# Optimization

./: CMakeLists.txt
src/: CMakeLists.txt  m_linesearch.f90  m_multid_optim.f90  m_oned_rootfinding.f90  m_optimization.f90  m_poly_roots.f90
tests/: CMakeLists.txt  multid.pf  oned.pf
